--- a/app/views/html_pages/home.html.erb
+++ b/app/views/html_pages/home.html.erb
@@ -1,3 +1,5 @@
-<title>Home | Orbit Feedback Application</title>
-<h1>Orbit#home</h1>
-<p>Find me in app/views/html_pages/home.html.erb</p>
+<%# provide is a rails function. We are associating the string Home with the label :title %>
+<% provide(:title, 'Home') %> 
+
+<h1>Orbit Home Page</h1>
+<p>This is the template <b>Home page</b> for our Orbit Feedback App</p>
