--- a/app/views/html_pages/home.html.erb
+++ b/app/views/html_pages/home.html.erb
@@ -4,5 +4,5 @@
 <div class="center jumbotron">
   <h1>Welcome to Orbit</h1>
 
-  <%= link_to "Create an account", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Create an account", '#', class: "btn btn-lg btn-primary" %>
 </div>
