--- a/app/views/html_pages/home.html.erb
+++ b/app/views/html_pages/home.html.erb
@@ -1,8 +1,22 @@
 <%# provide is a rails function. We are associating the string Home with the label :title %>
 <% provide(:title, 'Home') %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="snapshot_form">
+        <%= render 'shared/snapshot_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
 
 <div class="center jumbotron">
   <h1>Welcome to Orbit</h1>
 
   <%= link_to "Create an account", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+
+<% end %>
