--- a/app/views/html_pages/home.html.erb
+++ b/app/views/html_pages/home.html.erb
@@ -10,6 +10,10 @@
         <%= render 'shared/snapshot_form' %>
       </section>
     </aside>
+    <div class="col-md-8">
+      <h3>Snapshot Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
 
