--- a/app/views/snapshots/_snapshot.html.erb
+++ b/app/views/snapshots/_snapshot.html.erb
@@ -4,5 +4,8 @@
   <span class="content"><%= snapshot.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(snapshot.created_at) %> ago.
+    <% if current_user?(snapshot.user) %>
+      <%= link_to "delete", snapshot, method: :delete, data: { confirm: "Are you sure?" } %>
+    <% end %>
   </span>
 </li>
