--- a/app/views/snapshots/_snapshot.html.erb
+++ b/app/views/snapshots/_snapshot.html.erb
@@ -2,6 +2,7 @@
   <%= link_to gravatar_for(snapshot.user), snapshot.user %>
   <span class="user"><%= link_to snapshot.user.name, snapshot.user %></span>
   <span class="content"><%= snapshot.content %></span>
+  <%= image_tag snapshot.image if snapshot.image.attached? %>
   <span class="timestamp">
     Posted <%= time_ago_in_words(snapshot.created_at) %> ago.
     <% if current_user?(snapshot.user) %>
