--- a/app/views/html_pages/home.html.erb
+++ b/app/views/html_pages/home.html.erb
@@ -6,6 +6,9 @@
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
       <section class="snapshot_form">
         <%= render 'shared/snapshot_form' %>
       </section>
@@ -19,6 +22,8 @@
 
 <div class="center jumbotron">
   <h1>Welcome to Orbit</h1>
+  <h2>
+    
 
   <%= link_to "Create an account", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
