--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,24 @@
 <% provide(:title, @user.name) %>
-<div class='row'>
-    <aside class='col-md-4'>
-        <section class='user_info'>
-            <h1>
-                <%= gravatar_for @user %>
-                <%= @user.name%>
-            </h1>
-        </section>
-    </aside>
-    <div class="col-md-8">
-        <% if @user.snapshots.any? %>
-        <h3>Snapshots <%= @user.snapshots.count %></h3>
-        <ol class="snapshots">
-            <%= render @snapshots %>
-        </ol>
-        <%= will_paginate @snapshots %>
-        <% end %>
-    </div>
+<div class="row">
+  <aside class="col-md-4">
+    <section>
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <%= render 'follow_form' if logged_in? %>
+    <% if @user.snapshots.any? %>
+      <h3>Snapshots <%= @user.snapshots.count %></h3>
+      <ol class="snapshots">
+        <%= render @snapshots %>
+      </ol>
+      <%= will_paginate @snapshots %>
+    <% end %>
+  </div>
 </div>
